Füg ein weiteres Rezept und ein Bild auf der index Seite hinzu

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/shakshuka.html">Shakshuka</a>
+        <img src="./pics/meine-rezepte.jpeg" alt="meine-rezepte-pic" height="325" width="">
+        <p><a href="./recipes/shakshuka.html">Shakshuka</a></p>
+        <p><a href="./recipes/challah.html">Challah</a></p>
     </body>
 </html>
