--- a/recipes/shakshuka.html
+++ b/recipes/shakshuka.html
@@ -5,9 +5,9 @@
         <title>Shakshuka</title>
     </head>
     <body>
-        <h1>Shakshuka</h1>
+        <h1><u>Shakshuka</u></h1>
         <img src="../pics/shakshuka.jpeg" alt="shakshuka pic" height="200" width="">
-        <h2>Lecker und einfach</h2>
+        <h2><em>Lecker</em> und einfach</h2>
         <p>Vorbereitung: 10 Minuten - Zubereitung 20 Minuten</p>
         <h3>Zutaten:</h3>
         <ul>
